update swag table
